# NFT-Marketplace

./: .gitignore  README.md  package-lock.json  package.json
anchor/: .gitignore  Anchor.toml  README.md  codama.js  package.json
anchor/programs/nftmarketplace/: Cargo.toml
anchor/programs/nftmarketplace/src/: error.rs  escrow_test_helpers.rs  lib.rs  tests.rs
anchor/programs/nftmarketplace/src/handlers/: make_offer.rs  mod.rs  refund_offer.rs  shared.rs  take_offer.rs  take_offer_with_sol.rs
anchor/programs/nftmarketplace/src/state/: mod.rs  offer.rs
anchor/src/: create-codama-config.js  index.ts  nftmarketplace-exports.ts
anchor/src/helpers/: get-program-accounts-decoded.ts  get-program-accounts.ts
anchor/tests/: nftmarketplace.test.ts
src/app/: layout.tsx
src/app/account/[address]/: page.tsx
src/app/nftmarketplace/: page.tsx
src/components/: app-alert.tsx  app-header.tsx  app-layout.tsx
src/components/ui/: spinner.tsx
src/features/account/data-access/: use-transfer-sol-mutation.ts
src/features/dashboard/: dashboard-feature.tsx
src/features/nftmarketplace/: nftmarketplace-feature.tsx
src/features/nftmarketplace/data-access/: use-nftmarketplace-accounts-invalidate.ts  use-nftmarketplace-accounts-query-key.ts  use-nftmarketplace-accounts-query.ts  use-nftmarketplace-close-mutation.ts  use-nftmarketplace-decrement-mutation.ts  use-nftmarketplace-increment-mutation.ts  use-nftmarketplace-initialize-mutation.ts  use-nftmarketplace-program.ts  use-nftmarketplace-set-mutation.ts
src/features/nftmarketplace/ui/: nftmarketplace-ui-button-set.tsx  (+8 more)
