[package]
name = "nftmarketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nftmarketplace"

[features]
default = []
integration-tests = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }

[dev-dependencies]
solana-kite = "0.2.1"
litesvm = "0.8.2"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-sdk = "3.0.0"

